@@ -8,8 +8,6 @@ module Gluon
   # = namespace for web components
   module Web
     autoload :ErrorMessages, 'gluon/web/error'
-    autoload :InternalServerErrorPage, 'gluon/web/500'
-    autoload :NotFoundErrorPage, 'gluon/web/404'
     autoload :OneTimeToken, 'gluon/web/token'
     autoload :Table, 'gluon/web/table'
   end
