@@ -1,18 +1,0 @@
-<html>
-<head>
-<title>404 Not Found Error</title>
-</head>
-<body>
-<h1>404 Not Found</h1>
-
-<p>No page at `<kbd><%= value :uri %></kbd>'.</p>
-
-</body>
-</html>
-
-<%#
-  Local Variables:
-  mode: HTML
-  indent-tabs-mode: nil
-  End:
-%>
